Add and publish new memo

--- a/pen/templates/pen/memo.html
+++ b/pen/templates/pen/memo.html
@@ -11,52 +11,10 @@
     <script src="{% static 'pen/js/script.js' %}"></script>
 </head>
 <body>
-
-    <textarea class="use-keyboard-input"></textarea>
-
-
-    <form>
-        <label><textarea name="body" cols="40" rows="10"></textarea></label>
-        </br>   <!--  Break -->
-        <button type="button">a</button>
-        <button type="button">ą</button>
-        <button type="button">b</button>
-        <button type="button">c</button>
-        <button type="button">ć</button>
-        <button type="button">d</button>
-        <button type="button">e</button>
-        <button type="button">ę</button>
-        <button type="button">f</button>
-        <button type="button">g</button>
-        <button type="button">h</button>
-        <button type="button">i</button>
-        <button type="button">j</button>
-        </br>
-        <button type="button">k</button>
-        <button type="button">l</button>
-        <button type="button">ł</button>
-        <button type="button">m</button>
-        <button type="button">n</button>
-        <button type="button">ń</button>
-        <button type="button">o</button>
-        <button type="button">ó</button>
-        <button type="button">p</button>
-        <button type="button">q</button>
-        <button type="button">r</button>
-        <button type="button">s</button>
-        <button type="button">ś</button>
-        </br>
-        <button type="button">t</button>
-        <button type="button">u</button>
-        <button type="button">v</button>
-        <button type="button">w</button>
-        <button type="button">x</button>
-        <button type="button">y</button>
-        <button type="button">z</button>
-        <button type="button">ź</button>
-        <button type="button">ż</button>
+    <form action="{% url 'pen:add_new_memo' %}" method="post">
+        {% csrf_token %}
+        <textarea name="memo_body" class="use-keyboard-input" cols="95" rows="20"></textarea>
+        <button type="submit">Save the note</button>
     </form>
-
-
 </body>
 </html>
