--- a/pen/static/pen/css/style.css
+++ b/pen/static/pen/css/style.css
@@ -1,3 +1,4 @@
+/*
 .keyboard {
     position: fixed;
     left: 0;
@@ -9,15 +10,21 @@
     user-select: none;
     transition: bottom 0.4s;
 }
-
+*/
+/*
 .keyboard--hidden {
     bottom: -100%;
 }
+*/
 
+/* center of keyboard */
+/*
 .keyboard__keys {
     text-align: center;
 }
-
+*/
+/*
+*/
 .keyboard__key {
     height: 45px;
     width: 6%;
@@ -25,8 +32,10 @@
     margin: 3px;
     border-radius: 4px;
     border: none;
+    /*
     background: rgba(255, 255, 255, 0.2);
-    color: #ffffff;
+    */
+    /*color: #ffffff;*/
     font-size: 1.05rem;
     outline: none;
     cursor: pointer;
