--- a/pen/templates/pen/show_all_memos.html
+++ b/pen/templates/pen/show_all_memos.html
@@ -5,6 +5,7 @@
     <title>CRUD</title>
 </head>
 <body>
+<table>
       {% if memo %}
       {% for m in memo %}
       <tr>
@@ -12,5 +13,7 @@
       </tr>
       {% endfor %}
       {% endif %}
+</table>
+
 </body>
 </html>
