--- a/pen/templates/pen/register.html
+++ b/pen/templates/pen/register.html
@@ -8,5 +8,6 @@
 <form method="POST">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Zarejsestruj">
+</form>
 </body>
 </html>
