--- a/pen/static/pen/css/style.css
+++ b/pen/static/pen/css/style.css
@@ -3,9 +3,10 @@
     border: 3px solid #f00;
     font-weight: bold;
     background-color: #f00;
-    height: 20px;
-    width: 20px;
-    font-size: 25px;
+    height: 50px;
+    width: 140px;
+    font-size: 40px;
+    text-align:center;
 }
 
 .highlighted
@@ -13,16 +14,18 @@
     border: 3px solid white;
     font-weight: bold;
     background-color: white;
-    height: 20px;
-    width: 20px;
-    font-size: 25px;
+    height: 50px;
+    width: 140px;
+    font-size: 40px;
+    text-align:center;
 }
 
 .buttons {
     border: 3px solid white;
     font-weight: bold;
     background-color: white;
-    height: 20px;
-    width: 20px;
-    font-size: 25px;
+    height: 50px;
+    width: 140px;
+    font-size: 40px;
+    text-align:center;
 }
