--- a/pen/templates/pen/memo.html
+++ b/pen/templates/pen/memo.html
@@ -14,8 +14,7 @@
 <body>
     <form action="{% url 'pen:add_new_memo' %}" method="post">
         {% csrf_token %}
-        <textarea name="memo_body" class="use-keyboard-input" cols="95" rows="20"></textarea>
-        <button type="submit">Save the note</button>
+        <textarea name="memo_body" class="use-keyboard-input" id="my_console" cols="110" rows="20"></textarea>
         <input value="q" class="buttons" id="0"/>
         <input value="w" class="buttons" id="1"/>
         <input value="e" class="buttons" id="2"/>
@@ -24,6 +23,7 @@
         <input value="y" class="buttons" id="5"/>
         <input value="u" class="buttons" id="6"/>
         <input value="i" class="buttons" id="7"/>
+        <input type="submit" value="zapisz" class="buttons" id="8"/>
     </form>
 </body>
 </html>
