--- a/pen/static/pen/css/style.css
+++ b/pen/static/pen/css/style.css
@@ -1,31 +1,34 @@
 .highlight
 {
-    border: 3px solid #f00;
+    border: 3px solid black;
     font-weight: bold;
-    background-color: #f00;
-    height: 50px;
+    background-color: red;
+    height: 55px;
     width: 140px;
     font-size: 40px;
     text-align:center;
+    border-radius: 20px;
 }
 
 .highlighted
 {
-    border: 3px solid white;
+    border: 3px solid black;
     font-weight: bold;
-    background-color: white;
-    height: 50px;
+    background-color: green;
+    height: 55px;
     width: 140px;
     font-size: 40px;
     text-align:center;
+    border-radius: 20px;
 }
 
 .buttons {
-    border: 3px solid white;
+    border: 3px solid black;
     font-weight: bold;
-    background-color: white;
-    height: 50px;
+    background-color: green;
+    height: 55px;
     width: 140px;
     font-size: 40px;
     text-align:center;
+    border-radius: 20px;
 }
