--- a/pen/templates/pen/memo.html
+++ b/pen/templates/pen/memo.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'pen/css/style.css'%}">
     <script src="{% static 'pen/js/script.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
 </head>
 <body>
 
@@ -16,9 +17,9 @@
             {% csrf_token %}
             <textarea name="memo_body" class="use-keyboard-input" id="my_console" cols="110" rows="20"></textarea>
             <input type="submit" value="zapisz" class="buttons" id="35"/>
+
         </form>
 
-        <script type="text/javascript"></script>
 
         <input value="a" class="buttons" id="0"/>
         <input value="i" class="buttons" id="1"/>
