clear text area

--- a/pen/templates/pen/memo.html
+++ b/pen/templates/pen/memo.html
@@ -10,17 +10,18 @@
     <script src="{% static 'pen/js/script.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
         <form id="jsform" action="{% url 'pen:add_new_memo' %}" method="post">
             {% csrf_token %}
             <textarea name="memo_body" class="use-keyboard-input" id="my_console" cols="110" rows="20"></textarea>
-            <input type="submit" value="zapisz" class="buttons" id="35"/>
 
         </form>
 
-
+        <input value="zapisz" class="buttons" id="35"/>
+        <input value="wyczyść" class="buttons" onclick="clearTextarea()" id="36">
         <input value="a" class="buttons" id="0"/>
         <input value="i" class="buttons" id="1"/>
         <input value="o" class="buttons" id="2"/>
