--- a/pen/static/pen/css/style.css
+++ b/pen/static/pen/css/style.css
@@ -61,7 +61,7 @@
 .center {
     justify-content: center;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .centering {
@@ -69,9 +69,11 @@
     text-align: center;
     margin-bottom: 20px;
     border: 3px solid black;
-    margin-left: 325px;
-    margin-right: 325px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #0000FF;
     border-radius: 50px;
     box-shadow: 5px 10px;
+    height: 90px;
+    width: 700px;
 }
