--- a/pen/templates/pen/login.html
+++ b/pen/templates/pen/login.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <form method="POST">{% csrf_token %}
-        <input type="text" name="password" placeholder="username">
-        <input type="password" name="user" placeholder="password">
+        <input type="text" name="user" placeholder="username">
+        <input type="password" name="password" placeholder="password">
         <input type="submit" name="Zaloguj">
     </form>
 </body>
