--- a/pen/templates/pen/login.html
+++ b/pen/templates/pen/login.html
@@ -8,7 +8,7 @@
     <form method="POST">{% csrf_token %}
         <input type="text" name="user" placeholder="username">
         <input type="password" name="password" placeholder="password">
-        <input type="submit" name="Zaloguj">
+        <input type="submit" value="Zaloguj">
     </form>
 </body>
 </html>
