--- a/pen/templates/pen/memo.html
+++ b/pen/templates/pen/memo.html
@@ -15,12 +15,11 @@
     Witaj {{ user }}!
     <form method="POST">
         {% csrf_token %}
-        <br>
-        <button type="submit" class="button-secondary"> <a href="{% url 'pen:login-view' %}"> Wyloguj </a> </button>
+        <button type="submit"><a href="{% url 'pen:login-view' %}">Wyloguj</a></button>
     </form>
     {% else %}
     {% csrf_token %}
-        <button type="submit" class="button-secondary"> <a href="{% url 'pen:memo' %}"> Zaloguj </a> </button>
+        <button type="submit"><a href="{% url 'pen:memo' %}">Zaloguj</a></button>
     {% endif %}
 </form>
 
